# launchpad-animated-fishstick

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  ThirdPartyNotices.txt  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/actions/connect-arc/: action.yaml  wait-connected.sh
.github/actions/create-k3s-cluster/: action.yaml
.github/actions/setup-siteops/: action.yaml
.github/workflows/: _siteops-deploy.yaml  ci.yaml  codeql.yaml  deploy.yaml  e2e-test.yaml  integration-test.yaml
.pipelines/: ci.yaml  deploy.yaml  integration-test.yaml
.pipelines/templates/: setup-siteops.yaml  siteops-deploy.yaml
docs/: README.md  aio-releases.md  ci-cd-setup.md  e2e-testing.md  manifest-includes.md  manifest-reference.md  parameter-resolution.md  secret-sync.md  site-configuration.md  targeting.md  troubleshooting.md
scripts/: generate-site-overrides.py  render-e2e-site.py  validate-bicep.ps1
siteops/: __init__.py  __main__.py  cli.py  executor.py  models.py  orchestrator.py
tests/: __init__.py  conftest.py  test_cli.py  test_executor.py  test_extract_spc_name_from_ref.py  test_kubectl_base.py  test_manifest_includes.py  test_models.py  test_mqtt_subscriber_manifest.py  test_orchestrator_core.py  test_orchestrator_extra_sites_dirs.py  test_orchestrator_inheritance.py  test_orchestrator_parameters.py  test_orchestrator_unresolved.py  test_orchestrator_validation.py  test_render_e2e_site.py
tests/e2e/sites/: e2e-test.yaml.tmpl
tests/integration/: conftest.py  test_aio_install_manifest.py  test_aio_upgrade_manifest.py  test_opc_ua_solution_manifest.py  test_secretsync_manifest.py  test_sync_secrets_manifest.py
tests/integration/helpers/: assertions.py  kube.py  mqtt.py  opcua.py  secretsync.py
tests/workspace/: conftest.py  test_aio_module_parity.py  test_manifest_validation.py  test_parameter_chaining.py  test_secretsync_validation.py  test_site_configuration.py
workspaces/iot-operations/: README.md
workspaces/iot-operations/manifests/: README.md  _aio-fundamentals.yaml  _resolve-aio.yaml  _secretsync.yaml  aio-install.yaml  aio-upgrade.yaml  secretsync.yaml
(+67 files in other folders)
